# clockwords

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: benchmark.rs  tui_demo.rs
src/: lib.rs  resolve.rs  scanner.rs  types.rs
src/lang/: de.rs  en.rs  es.rs  fr.rs  mod.rs  numbers.rs
tests/: colon_time.rs  combined_weekday_time.rs  de.rs  en.rs  es.rs  fr.rs  general.rs  next_friday.rs  timezone.rs
