[package]
name = "clockwords"
description = "Find and resolve natural-language time expressions across multiple languages"
license = "Apache-2.0"
repository = "https://github.com/hg8496/clockwords"
keywords = ["time", "nlp", "parser", "chrono", "multilingual"]
categories = ["text-processing", "date-and-time", "internationalization"]
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10"
regex = "1"
aho-corasick = "1"

[dev-dependencies]
chrono-tz = "0.10"
crossterm = "0.29.0"
iana-time-zone = "0.1"
ratatui = "0.30.0"
